k8s/carpooling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carpooling-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carpooling
  template:
    metadata:
      labels:
        app: carpooling
    spec:
      containers:
        - name: carpooling
          image: aadi6161/carpooling-service:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: carpooling-service
spec:
  selector:
    app: carpooling
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
