k8s/doctor-appointment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-appointment
  template:
    metadata:
      labels:
        app: doctor-appointment
    spec:
      containers:
        - name: doctor-appointment
          image: aadi6161/doctor-appointment-service:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: doctor-appointment-service
spec:
  selector:
    app: doctor-appointment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
