k8s/roommate-finder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roommate-finder-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roommate-finder
  template:
    metadata:
      labels:
        app: roommate-finder
    spec:
      containers:
        - name: roommate-finder
          image: aadi6161/roommate-finder-service:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: roommate-finder-service
spec:
  selector:
    app: roommate-finder
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
